Add DeleteGroupParserTest